tests/snapshots/run_wpt_conformance__coreml_max_uint8_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
max.https.any.js max uint8 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type max_pool: Required param 'pad' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[1, 2, 2, 3];
    inputB: u8[1, 2, 2, 3];
  }

  nodes {
    [output] = max(inputA, inputB, label="");
  }

  outputs { output; }
}
