tests/snapshots/run_wpt_conformance__coreml_minValue_as_-Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js minValue as -Infinity, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature clampInput is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[7] @bytes([0, 0, 128, 255, 0, 0, 128, 127, 145, 28, 103, 250, 0, 0, 0, 79, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 0, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue="-Infinity");
  }

  outputs { clampOutput; }
}
