tests/snapshots/run_wpt_conformance__coreml_min_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
min.https.any.js min float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983301436_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([130, 208, 199, 208, 194, 83, 39, 204, 32, 84, 113, 204, 192, 212, 89, 212, 179, 82, 227, 208, 15, 86, 13, 209, 162, 84, 52, 40, 218, 80, 110, 204, 89, 76, 37, 213, 8, 213, 217, 207, 148, 212, 56, 208, 109, 205, 242, 68]);
    operand_1: f16[24] @bytes([3, 209, 100, 85, 105, 82, 53, 211, 25, 214, 56, 207, 8, 85, 213, 81, 218, 83, 58, 82, 200, 212, 74, 85, 79, 82, 129, 204, 51, 69, 250, 209, 206, 81, 116, 212, 94, 212, 22, 81, 173, 204, 10, 77, 62, 81, 223, 77]);
  }

  nodes {
    [output] = min(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983301436_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
