tests/snapshots/run_wpt_conformance__coreml_mul_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mul.https.any.js mul float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983302332_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([36, 82, 244, 73, 71, 205, 108, 84, 232, 213, 221, 213, 151, 73, 26, 208, 53, 85, 178, 85, 49, 175, 179, 75, 187, 202, 84, 210, 203, 207, 158, 198, 111, 77, 130, 77, 64, 213, 225, 213, 90, 83, 226, 211, 158, 66, 241, 72]);
    operand_1: f16[24] @bytes([175, 84, 81, 208, 42, 208, 189, 82, 59, 213, 242, 76, 137, 80, 74, 208, 35, 82, 209, 210, 108, 84, 230, 210, 223, 213, 131, 83, 204, 213, 122, 85, 113, 200, 125, 84, 138, 206, 188, 204, 85, 80, 159, 211, 143, 201, 216, 84]);
  }

  nodes {
    [output] = mul(operand_0, operand_1, label="");
  }

  outputs { output; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
